<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/material_dynamic_neutral90"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/anu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/top_main" />

    <LinearLayout
        android:id="@+id/ly_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            style="@style/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/hi" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/tile_h1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/welcome_" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/title_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/desc" />

        <com.google.android.material.button.MaterialButton
            style="@style/txt_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:padding="16dp"
            android:backgroundTint="@color/material_dynamic_primary40"
            android:text="@string/get_started" />

    </LinearLayout>

</RelativeLayout>