<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/material_dynamic_neutral90"
    tools:context=".login">
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/anu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/top_main" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:padding="24dp">
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsblack"
            android:text="@string/login_txt"
            android:textSize="45sp"
            android:textColor="?android:attr/textColorPrimary"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:text="@string/signin_desc"
            android:fontFamily="@font/poppinsmedium"
            android:textSize="16sp"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/header"
        android:layout_alignStart="@id/header">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            app:boxCornerRadiusTopStart="24dp"
            app:boxCornerRadiusTopEnd="24dp"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/Email"
                android:textSize="14sp"
                android:fontFamily="@font/poppinsmedium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomStart="24dp"
            app:boxCornerRadiusBottomEnd="24dp"
            app:passwordToggleEnabled="true"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:fontFamily="@font/poppinsmedium"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppinsblack"
            android:padding="16dp"

            android:text="@string/sign_in"
            style="@style/txt_btn"
            android:backgroundTint="@color/material_dynamic_primary40"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/infotech"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:layout_below="@id/panel"
        android:layout_alignStart="@id/panel">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_with"
            android:fontFamily="@font/poppinsmedium"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/infotechAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ilab_account"
            android:textColor="@color/material_dynamic_primary60"
            android:fontFamily="@font/poppinsmedium"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/infotech"
        android:layout_alignStart="@id/infotech">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/doesn_t_have_an_account"
            android:fontFamily="@font/poppinsmedium"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/createText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_here"
            android:layout_marginTop="8dp"
            android:textColor="@color/material_dynamic_primary60"
            android:fontFamily="@font/poppinsmedium"
            app:layout_constraintEnd_toEndOf="parent"/>

    </LinearLayout>
    </RelativeLayout>

</RelativeLayout>